<resources>
    <string name="app_name">CalcKids</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="required">*this field requierd</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_open_screen_parent">Open_Screen_Parent</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <!--    titles-->
    <string name="hello"><big>Hello %1$s!</big> user: %2$s id: %3$d fid: %4$d</string>
    <string name="parent"><big>by user: %1$s</big></string>
    <!--    -->

    <!--    messages for user-->
    <string name="welcome">welcome <b>%1$s %2$s</b></string>
    <string name="networkerror">Error: There is network problem.</string>
    <string name="fillAll">Please fill all fields.</string>
    <string name="invalidValue">Please fill all fields with valid value.</string>
    <string name="erroruserpass">Either user name or password invalid.</string>
    <string name="familyidnum">Family id need to be an number</string>
    <string name="passwordmtach">The passwords not match.</string>
    <string name="savedChanges">The changes have been saved.</string>
    <!--    -->

    <!--    Strings for menu-->
    <string name="logupsuccess">The log up was successful!</string>
    <string name="message">MESSAGES</string>
    <string name="mission">MISSIONS</string>
    <string name="request">REQUESTS</string>
    <string name="balance">BALANCE</string>
    <string name="loan">LOANS</string>
    <string name="invest">INVESTMENTS</string>
    <string name="createinvest">CREATE INVEST</string>
    <string name="createloan">CREATE LOAN</string>
    <string name="send">SEND</string>
    <string name="settings">SETTINGS</string>
    <!---->

    <!--    strings for settings-->
    <string name="title_settings">SET PERCENTS</string>
    <string name="loan_interest_title">Percent of loan interest:  %1$.2f</string>
    <string name="long_interest_title">Percent of long investment:  %1$.2f</string>
    <string name="short_interest_title">Percent of short investment:  %1$.2f</string>

    <string name="private_balance">Current balance</string>
    <string name="loans_title">Loans current state:</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_balance">balance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name">User name</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="cantFind">Can\'t find father.</string>
    <string name="createAction">CREATE ACTION</string>
    <string name="execute">EXECUTE</string>
    <string name="Type">Type: income/expense</string>
    <string name="amount">Amount</string>
    <string name="length">Type: long/short</string>
    <string name="not_saved">not Saved</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="create_investment">Create Investment</string>
    <string name="longinvest">Long</string>
    <string name="shortinvest">Short</string>
    <string name="create_loan">Create loan</string>
    <string name="subject">Subject</string>
    <string name="text">Text</string>
    <string name="new_user_try_one_from_below">New user? try one from below:</string>
    <string name="join_to_exist_family">Join to exist family</string>
    <string name="create_new_family">Create new family</string>
    <string name="startwelcome">Welcome</string>
    <string name="first_name">First name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="family_id">Family ID</string>
    <string name="family_name">Family name</string>
    <string name="submit">submit</string>
    <string name="set_percents">set percents</string>
    <string name="save">Save</string>
    <string name="to_delete">To delete this user:</string>
    <string name="to_define_parent">To define this user as parent:</string>
    <string name="create_transaction">Create transaction</string>
    <string name="date">date</string>
    <string name="from">from</string>
    <string name="type">type</string>
    <string name="interest">interest</string>
    <string name="end">end</string>

</resources>