<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="false"
    android:layout_alignParentTop="false"
    android:layout_alignParentEnd="false"
    android:layout_alignParentBottom="false"
    android:layout_centerVertical="false"
    android:background="@drawable/mainpage1"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="261dp"
        android:layout_height="141dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="88dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.512"
        app:srcCompat="@drawable/logo3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="261dp"
        android:layout_height="48dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="33dp"
        android:fontFamily="More Fonts..."
        android:text="@string/startwelcome"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#014D70"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="259dp"
    android:layout_height="200dp"
    android:layout_marginStart="33dp"
    android:layout_marginTop="220dp"
    android:layout_marginEnd="33dp"
    android:gravity="center|top|center_vertical"
    android:orientation="vertical"
    android:paddingTop="10dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/mainUser"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/user_name"
            android:gravity="left"
            android:inputType="textPersonName"
            android:singleLine="true"

            android:textColorHint="@color/white"/>

        <EditText
            android:id="@+id/mainPassword"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/password"
            android:singleLine="true"
            android:gravity="start"
            android:inputType="textPassword"
            android:textColorHint="@color/white"/>

        <Button
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#595757"
            android:text="@string/sign_in"
            android:textColor="#F8F5F5"
            android:onClick="onClick"/>

    </LinearLayout>


    <TextView
        android:id="@+id/textView5"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="115dp"
        android:background="#00EFEBEB"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/new_user_try_one_from_below"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="#FAF7F7"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/newUser"
        android:layout_width="174dp"
        android:layout_height="32dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="115dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00F8F6F6"
        android:text="@string/join_to_exist_family"
        android:textAlignment="viewStart"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:onClick="registerClick"/>

    <Button
        android:id="@+id/newFamily"
        android:layout_width="176dp"
        android:layout_height="33dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="165dp"
        android:background="#02FFFFFF"
        android:backgroundTint="#00F8F6F6"
        android:text="@string/create_new_family"
        android:textAlignment="viewStart"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newUser"
        android:onClick="registerClick"/>

</androidx.constraintlayout.widget.ConstraintLayout>