<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.activities.SettingsActivity">

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/settingSeek"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/userTitle_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:paddingStart="10dp"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/icon_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/settingSeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">


        <TextView
            android:id="@+id/title_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="set percents"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/loanInterestText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/loan_interest_title"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/seekBarLoan"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:scaleX="2"
            android:scaleY="2"
            android:min="1"
            android:max="500"/>

        <TextView
            android:id="@+id/longInvestText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/long_interest_title"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/seekBarLong"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:scaleX="2"
            android:scaleY="2"
            android:progress="0"
            android:min="1"
            android:max="500"/>

        <TextView
            android:id="@+id/shortInvestText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/short_interest_title"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/seekBarShort"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:scaleX="2"
            android:scaleY="2"
            android:min="1"
            android:max="500" />
<!--        for set value in code-->
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/hidden_loan"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/hidden_long"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/hidden_short"/>
<!--        -->
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>